[tool.poetry]
name = "blueprints-nominal-cover"
version = "0.1.0"
description = ""
authors = ["Enrique García Méndez <44614728+egarciamendez@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
